# timelord

./: .gitignore  Cargo.toml  flake.nix  shell.nix
data/: db.json
fonts/fontello-8a9eba6a/: config.json  demo.html
fonts/fontello-8a9eba6a/css/: fontello-codes.css  fontello-embedded.css  fontello-ie7-codes.css  fontello-ie7.css  fontello.css
fonts/fontello-8a9eba6a/font/: fontello.eot
src/: error.rs  icons.rs  main.rs  task.rs
