[package]
name = "timelord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.30", features = ["serde"] }
directories-next = "2.0.0"
# env_logger = "0.10.0"
iced = { version = "0.10.0", features = ["image", "debug", "canvas", "svg", "async-std"] }
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
uuid = { version = "1.4.1", features = ["serde", "v4", "fast-rng"] }
