[package]
name = "timelord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib_timelord"
path = "src/lib.rs"

[[bin]]
name = "timelord"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = "0.8.5"
directories-next = "2.0.0"
iced = { git = "https://github.com/iced-rs/iced", branch = "master", features = ["image", "debug", "canvas", "svg", "tokio"] }
once_cell = "1.19.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.111"
serde_with = { version = "3.4.0", features = ["chrono"] }
tokio = { version = "1.35.1", default-features = false, features = ["fs", "io-util", "time"] }
uuid = { version = "1.6", features = ["serde", "v4", "fast-rng"] }
